fix z-index

--- a/src/scss/alliance/_partial-one.scss
+++ b/src/scss/alliance/_partial-one.scss
@@ -388,6 +388,7 @@
   main {
     margin-top: 80px;
     #quotesSlider {
+      z-index: 9999999;
       .carousel-inner {
         .carousel-item {
           margin-bottom: -20px;
